# origin

./: .gitignore
Homework_Docker/Homework_task1/: Dockerfile  main.cpp
Homework_Docker/Homework_task2/: Dockerfile
Homework_Lesson1/HomeworkTask1/: HomeworkTask1.cpp  HomeworkTask1.sln  HomeworkTask1.vcxproj
Homework_Lesson1/HomeworkTask2/: HomeworkTask2.cpp  HomeworkTask2.sln  HomeworkTask2.vcxproj  HomeworkTask2.vcxproj.filters
Homework_Lesson1/Homework_Task1/: Homework_Struct_Enum.sln
Homework_Lesson1/HomewrokTask3/: HomewrokTask3.cpp  HomewrokTask3.sln  HomewrokTask3.vcxproj  HomewrokTask3.vcxproj.filters
Homework_Lesson1_Под капотом компиляция и линковка/Homework_Task1/: Homework_Task1.cpp  Homework_Task1.vcxproj.filters
Homework_Lesson2/Homework_Task1/: Homework_Task1.cpp  Homework_Task1.sln  Homework_Task1.vcxproj
Homework_Lesson2/Homework_Task2/: Homework_Task2.cpp  Homework_Task2.sln  Homework_Task2.vcxproj
Homework_Lesson2_Жизненный цикл объекта. RAII/Homework_Task1/: Homework_Task1.cpp  Homework_Task1.sln
Homework_Lesson2_Жизненный цикл объекта. RAII/Homework_Task2/: Homework_Task1.cpp
Homework_Lesson3/Homework_Task1/: Homework_Task1.cpp  Homework_Task1.sln  Homework_Task1.vcxproj
Homework_Lesson3/Homework_Task2/: Homework_Task2.cpp  Homework_Task2.sln  Homework_Task2.vcxproj
Homework_Lesson3_UnitTest/Homework_Task1/: main.cpp
Homework_Lesson3_UnitTest/Homework_Task2/: main.cpp
Homework_Lesson4/Homework_Task1/: Homework_Task1.cpp  Homework_Task1.sln  Homework_Task1.vcxproj
Homework_Lesson4/Homework_Task2/: Homework_Task2.cpp  Homework_Task2.sln  Homework_Task2.vcxproj  Homework_Task2.vcxproj.filters
Homework_Lesson4_Шаблоны и функторы/Homework_Task1/: Homework_Task1.cpp
Homework_Lesson4_Шаблоны и функторы/Homework_Task2/: Homework_Task1.cpp
Homework_Lesson4_Шаблоны и функторы/Homework_Task3/: Homework_Task1.cpp
Homework_Lesson5_STL. часть 1/Homework_Task1/: Homework_Task1.cpp
Homework_Lesson5_STL. часть 1/Homework_Task2/: Homework_Task1.cpp
Homework_Lesson5_Работа с PostgreSQL из С++/Homework_Task1/: CMakeLists.txt  main.cpp
Homework_Lesson6_STL. часть 2/Homework_Task1/: Homework_Task1.cpp
Homework_Lesson6_STL. часть 2/Homework_Task2/: Homework_Task1.cpp
Homework_Lesson7_Умные указатели/Homework_Task1/: Homework_Task1.cpp  Homework_Task1.vcxproj
Homework_Lesson8_Move-семантика/Homework_Task1/: Homework_Task1.cpp
Homework_Lesson8_Move-семантика/Homework_Task2/: Homework_Task1.cpp
Homework_lesson10/Homework_Task1/: CMakeLists.txt  Task1Lib.cpp  Task1Lib.h  TaskLibClient.cpp
Homework_lesson10/Homework_Task2-3/: CMakeLists.txt  Client.cpp  Lib2.cpp  Lib2.h  TASK2Client.cpp  TASK2LIB.cpp  TASK2LIB.h
Homework_lesson5/: .gitignore
Homework_lesson5/Homework_Task1/: Homework_Task1.cpp  Homework_Task1.sln  Homework_Task1.vcxproj  Homework_Task1.vcxproj.filters  Matematic.cpp  Matematic.h
Homework_lesson5/Homework_Task2/: Homework_Task2.sln  Homework_Task2.vcxproj  Homework_Task2.vcxproj.filters
Homework_lesson5/Homework_Task3/: Chetirehygolnic.cpp  Chetirehygolnic.h  Homework_Task3.cpp  Homework_Task3.vcxproj  Homework_Task3.vcxproj.filters  Parallelogram.cpp  PrymoiChetirehygolnic.cpp  PrymoiChetirehygolnic.h  PrymoiTrinangle.cpp  RBTrinangle.cpp  RBTrinangle.h  RSTrinangle.cpp  RSTrinangle.h  Romb.cpp  SquareChetirehygolnic.cpp  SquareChetirehygolnic.h  Trinangle.cpp  Trinangle.h
Homework_lesson6/Homework6_Task1/: Homework6_Task1.cpp  Homework6_Task1.sln  Homework6_Task1.vcxproj  Homework6_Task1.vcxproj.filters
Homework_lesson6/Homework6_Task2/: Homework6_Task2.cpp  Homework6_Task2.sln  Homework6_Task2.vcxproj  Homework6_Task2.vcxproj.filters
Homework_lesson7/Homework_Task1/: Homework_Task1.cpp  Homework_Task1.sln  Homework_Task1.vcxproj
Homework_lesson7/Homework_Task2/: Chetirehygolnic.cpp  EXception.cpp  EXception.h  Figure.cpp  Figure.h  Homework_Task3.cpp  Homework_Task3.sln  Homework_Task3.vcxproj  Homework_Task3.vcxproj.filters  Parallelogram.cpp  Parallelogram.h  PrymoiChetirehygolnic.cpp  PrymoiTrinangle.cpp  PrymoiTrinangle.h  RBTrinangle.cpp  RSTrinangle.cpp  Romb.cpp  Romb.h  SquareChetirehygolnic.cpp  Trinangle.cpp
Homework_lesson8/Homework_Task1/: Homework_Task1.cpp  Homework_Task1.sln  Homework_Task1.vcxproj
Homework_lesson8/Homework_Task2/: Homework_Task2.cpp  Homework_Task2.sln  (+1 more)
Димломный проект/Http/: CMakeLists.txt  POST_log.html  client_boost.cpp  header.h  log.txt  main.html  server_boost.cpp  test.cpp  test.txt
Димломный проект/Http/src/: DBusers.cpp  DBusers.h  client_boost.cpp  file_operations.cpp  file_operations.h  pch.h  server_boost.cpp  server_control.cpp  server_control.h  utils.cpp  utils.h
Димломный проект/Http2/: CMakeLists.txt
Димломный проект/Http2/src/: DBusers.cpp  DBusers.h  client.cpp  pch.h  server.cpp  web_proxy.cpp
Димломный проект/Http3/: CMakeLists.txt
Димломный проект/Http3/src/: DBusers.cpp  DBusers.h  crowler.cpp
Димломный проект/Архитектура серверов/: CMakeLists.txt  main.cpp
Димломный проект/Архитектура серверов/client/: CMakeLists.txt  client.cpp
Димломный проект/Архитектура серверов/client_server/: CMakeLists.txt  client_server.cpp
Димломный проект/Архитектура серверов/data_logger/: CMakeLists.txt  data_logger.cpp
Димломный проект/Архитектура серверов/monitor/: CMakeLists.txt  monitor.cpp
Димломный проект/Архитектура серверов/shared/: CMakeLists.txt  common.h  ipc.cpp  ipc.h  protocol.h
Димломный проект/Итог/: CMakeLists.txt  PROJECT_DESCRIPTION.md  README.md  config.ini
Димломный проект/Итог/include/: DBusers.h  api_client.h  config_parser.h  crawler.h  crawler_config.h  html_generator.h  html_parser.h  logger.h  pch.h  proxy_config.h  threadsafe_set.h  url_tools.h  word_tools.h
Димломный проект/Итог/src/: DBusers.cpp  DBusers.h  api_client.cpp  client.cpp  crawler.cpp  crawler_config.cpp  crowler.cpp  html_generator.cpp  html_parser.cpp  logger.cpp  pch.h  proxy_config.cpp  server.cpp  threadsafe_set.cpp  url_tools.cpp  web_proxy.cpp  word_tools.cpp
Димломный проект/Парсинг сайтов/: CMakeLists.txt  parsinc_html.cpp
(+290 files in other folders)
